# pixel-forge

./: .env.example  .gitignore  Makefile  README.md  dev.sh  pyproject.toml
.claude/skills/: pf-compose-map.md  pf-generate-character.md  pf-generate-placeable.md  pf-generate-tile.md  pf-generate-tileset.md  pf-new-project.md  pixel-style-guide.md
1974_california_girl_wearing_red_hat_white_shirt_b/: metadata.json
plugins/digital-being/: AGENTS.md  README.md
projects/sunny-street/: project.toml
tests/: test_actions.py  test_adapter_sunny_street.py  test_analyze_map.py  test_assets.py  test_backends_gemini.py  test_backends_stub.py  test_bundles.py  test_character_backend.py  test_cli_bundle.py  test_cli_generate.py  test_cli_new_project.py  test_cli_promote.py  test_cli_validate.py  test_compose.py  test_end_to_end.py  test_generate_integration.py  test_markers.py  test_migrate_legacy_kinds.py  test_paperdoll.py  test_paths.py  test_placeable_manifest_schema.py  test_postprocess.py  test_project.py  test_sheet_extract.py  test_split_tilesets.py  test_validate.py
tests/fixtures/: generate_fixtures.py  palette-4.hex
tools/pixel_forge/: __init__.py  __main__.py  actions.py  assets.py  batch_regenerate_props.py  bundles.py  cli.py  compose.py  generate.py  markers.py  migrate_legacy_kinds.py  paperdoll.py  paths.py  postprocess.py  pricing.py  project.py  sheet.py  sheet_extract.py  smoke_animal_sheet.py  smoke_paperdoll.py  usage.py  validate.py
web/: README.md  server.py
web/frontend/: vite.config.ts
web/frontend/src/: App.css  (+3 more)
web/tests/: test_server.py
(+62 files in other folders)
