[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-forge"
version = "0.0.1"
description = "Conversational pixel-art asset generator driven by Claude Code skills"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.2",
    "google-generativeai>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
